Provide horizontal scrollbar in table of contents sidebar instead of cropping the entries. This improves usability esp. for deeply nested TOCs.

BUG: 147233

svn path=/branches/KDE/3.5/kdegraphics/kpdf/; revision=680874